--- a/pizzaapp/package.json
+++ b/pizzaapp/package.json
@@ -35,6 +35,8 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
     "typescript": "5.0.4"
