--- a/pizzaapp/package.json
+++ b/pizzaapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-app-template",
+  "name": "next-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@nextui-org/button": "2.0.26",
     "@nextui-org/code": "2.0.24",
     "@nextui-org/input": "2.1.16",
