--- a/pizzaapp/package.json
+++ b/pizzaapp/package.json
@@ -24,7 +24,6 @@
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.6",
     "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
     "client-only": "^0.0.1",
@@ -41,11 +40,12 @@
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
     "tailwind-variants": "^0.1.18",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.0.4"
+    "tailwindcss": "3.3.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
-    "@types/gtag.js": "^0.0.18"
+    "@types/gtag.js": "^0.0.18",
+    "@types/react": "18.2.45",
+    "typescript": "5.3.3"
   }
 }
